# fernKam

./: .gitignore  README.md  WORKFLOWS.md  launcher.py  launcher.spec  preflight.py  start_backend.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_face_rect_integer.py  0003_face_embedding.py  0004_recreate_photo_thumbnails.py  0005_add_faces_scanned_at.py  0006_add_best_match_score.py  0007_fix_best_match_score_precision.py  0008_unique_confirmed_face_per_photo_person.py  0009_tasks_table.py  492d3537f49b_add_face_crop_data.py
backend/scripts/: check_db.py  enable_pgvector.py  stamp_scanned.py
backend/src/fernkam/: cli.py  config.py  face_processor.py  logs_sink.py  metadata.py  metadata_sync.py  stderr_capture.py  task_manager.py  thumbnails.py
backend/src/fernkam/api/: app.py  deps.py  schemas.py
backend/src/fernkam/api/routers/: albums.py  backup.py  faces.py  logs.py  media.py  people.py  photos.py  sync.py  tags.py  workflows.py
backend/src/fernkam/db/: __init__.py  app_logs_setup.py  base.py  person_centroids_setup.py  pgvector_setup.py  session.py  tasks_setup.py
backend/src/fernkam/db/models/: __init__.py  photos.py  tasks.py
backend/src/fernkam/importers/: digikam.py  filesystem.py
backend/src/fernkam/workflows/: remove_nonkeep_raw.py  shared.py  sorting_video.py
frontend/: .gitignore  package-lock.json  package.json  vite.config.ts
scripts/: check_db.py  check_faces.py  check_mysql_cols.py  check_people_tag.py  check_person_tags.py  clear_xmp_faces.py  (+5 more)
(+27 files in other folders)
