[project]
name = "fernkam"
version = "0.1.0"
description = "fernKam — self-hosted photo & video organizer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "geoalchemy2>=0.20.0",
    "granian>=2.7.4",
    "insightface>=1.0.1",
    "numpy>=2.4.6",
    "onnxruntime-gpu>=1.26.0",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pymysql>=1.2.0",
    "python-multipart>=0.0.29",
    "rawpy>=0.23.0",
    "exifread>=3.0.0",
    "rich>=15.0.0",
    "send2trash>=1.8.3",
    "scikit-learn>=1.8.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "structlog>=25.5.0",
    "typer>=0.25.1",
]

[project.scripts]
fernkam = "fernkam.cli:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "hatchling>=1.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fernkam"]
